6/10/2005:	v3.2.1
	- needs syslinux with updated gfx patch
	- texts updated for 10.1
	- implemented filesize, getcwd, chdir commands
	- using new cd layout

15/9/2005:	v3.2.0
	- better testing script
	- gcc 4.1 compile fixes

9/9/2005:	v3.1.8
	- oops, was already December

5/9/2005:	v3.1.7
	- Finnish texts updated

31/8/2005:	v3.1.6
	- fix color handling bug (#72232)
	- show penguins a bit more often

29/8/2005:	v3.1.5
	- added more keymaps (#113265)
	- long menus are wrapped
	- added 640x480 fallback for i845-like boards
	- new translations

24/8/2005:	v3.1.4
	- a different shade of blue
	- fixed penguin theme drawing bug

22/8/2005:	v3.1.3
	- new translations

22/8/2005:	v3.1.2
	- prepare for jpeg decompression to 8-bit color space
	- add penguin theme
	- Dansk keymap added

15/8/2005:	v3.1.1
	- fixed Dansk locale (#104084)
	- new translations added

5/8/2005:	v3.1.0
	- support images with alpha channel
	- new theme

27/7/2005:	v3.0.23
	- texts updated

23/6/2005:	v3.0.22
	- 32 bit modes now fully supported

22/6/2005:	v3.0.21
	- updated documentation

26/4/2005:	v3.0.20
	- harddisk install option gone (#60128)
	- syslinux updated for testing

22/4/2005:	v3.0.19
	- fixed 16 bit color mode selection (#79312)

21/4/2005:	v3.0.18
	- added live cd entry

20/4/2005:	v3.0.17
	- taiwan text fix (#78946)

11/4/2005:	v3.0.16
	- fixed file reading

21/3/2005:	v3.0.15
	- added slowenic translations

16/3/2005:	v3.0.14
	- new graphics

16/3/2005:	v3.0.13
	- speedup transparent menu drawing
	- adjust some colors

15/3/2005:	v3.0.12
	- updated translations

8/3/2005:	v3.0.11
	- fixed install source dialogs
	- fixed some memory leaks

7/3/2005:	v3.0.10
	- translation fix (#66743)
	- new splash graphics
	- fixed slow timeout (#66730)
	- enabled transparent menus

1/3/2005:	v3.0.9
	- new graphics
	- fixed translation texts
	- prepared for transparent menus

22/2/2005:	v3.0.8
	- fixed translation texts
	- ask for smb domain
	- corrected minor drawing error

21/2/2005:	v3.0.7