@@ -1,3 +1,7 @@
+12/10/2005:	v3.2.2
+	- do only aligned dword reads from video memory - some ATI boards
+	  need this (#114804)
+
 6/10/2005:	v3.2.1
 	- needs syslinux with updated gfx patch
 	- texts updated for 10.1
